vlib/v/parser/tests/struct_field_unknown_module_b.out
vlib/v/parser/tests/struct_field_unknown_module_b.vv:2:7: error: unknown module `term.ui`
    1 | struct Inter {
    2 |     code term.ui.KeyCode
      |          ~~~~~~~
    3 | }
