vlib/v/parser/tests/struct_field_unknown_module_b.vv
struct Inter {
	code term.ui.KeyCode
}
